Revert verbiage and fix position of collapse link. Will revisit verbiage changes after we branch. #18643
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@15749 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk-filter-param.css
+++ b/View/webapp/wdk/css/wdk-filter-param.css
@@ -435,6 +435,17 @@
 .filter-results.field-list h4 {
   margin-left: 0;
 }
+.wdk-AttributeFilter-Collapse {
+  padding-left: 1em;
+  cursor: pointer;
+}
+/*
+.wdk-AttributeFilter-TabNav {
+  display: inline-block;
+  position: relative;
+  top: 2px;
+}
+*/
 .wdk-AttributeFilter-Loading {
   position: absolute;
   top: 65px;
